--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: url("./images/girl.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: 'Montserrat';
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: 'Montserrat';
     
 }
 
