--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 body {
   height: 100vh;
   margin: 0;
@@ -8,11 +10,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
     
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
